# ArcProc

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS.txt  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
arcetl/: .pylintrc  __init__.py  _analyze.py  _arcobj.py  _attributes.py  _combo.py  _convert.py  _dataset.py  _features.py  _geoset.py  _metadata.py  _network.py  _proximity.py  _services.py  _workspace.py  analyze.py  arcobj.py  arcwrap.py  attributes.py  combo.py  compare.py  convert.py  dataset.py  diff.py  etl.py  feature.py  features.py  fields.py  geometry.py  geoset.py  helpers.py  metadata.py  network.py  operations.py  properties.py  proximity.py  services.py  set.py  temp_ops.py  values.py  (+1 more)
arcetl/geometry/: __init__.py  constructs.py  sets.py  transformations.py
arcetl/operators/: __init__.py  dataset.py  feature.py  workspace.py
arcproc/: .pylintrc  __init__.py  arcobj.py  attributes.py  combo.py  compare.py  convert.py  dataset.py  etl.py  exceptions.py  features.py  field.py  geometry.py  geoset.py  helpers.py  managers.py  metadata.py  network.py  proximity.py  services.py  tracking.py  workspace.py
tests/: context.py  test_arcetl.py
